cf_analysis_results/checkerframework_results/url675964e2b9_pentaho_pentaho_commons_json_tgz-pJ8-org_json_TestJ8.txt
../../../../datasets/june2020_dataset/url675964e2b9_pentaho_pentaho_commons_json_tgz-pJ8-org_json_TestJ8/src/org/json/JSONObject.java:1476: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-333 $$ java.io.Writer $$ regular method exit $$ ( 49949, 49978 ) $$ @MustCall method close may not have been invoked on temp-var-333 or any of its aliases.
                    ((JSONObject)v).write(writer);
                                         ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url675964e2b9_pentaho_pentaho_commons_json_tgz-pJ8-org_json_TestJ8/src/org/json/JSONObject.java:1478: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-334 $$ java.io.Writer $$ regular method exit $$ ( 50053, 50081 ) $$ @MustCall method close may not have been invoked on temp-var-334 or any of its aliases.
                    ((JSONArray)v).write(writer);
                                        ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url675964e2b9_pentaho_pentaho_commons_json_tgz-pJ8-org_json_TestJ8/src/org/json/JSONArray.java:946: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-515 $$ java.io.Writer $$ regular method exit $$ ( 30933, 30962 ) $$ @MustCall method close may not have been invoked on temp-var-515 or any of its aliases.
                    ((JSONObject)v).write(writer);
                                         ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url675964e2b9_pentaho_pentaho_commons_json_tgz-pJ8-org_json_TestJ8/src/org/json/JSONArray.java:948: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-516 $$ java.io.Writer $$ regular method exit $$ ( 31037, 31065 ) $$ @MustCall method close may not have been invoked on temp-var-516 or any of its aliases.
                    ((JSONArray)v).write(writer);
                                        ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url675964e2b9_pentaho_pentaho_commons_json_tgz-pJ8-org_json_TestJ8/src/org/json/Test.java:438: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-1039 $$ java.io.Writer $$ possible exceptional exit due to XML.toJSONObject(s) with exception type org.json.JSONException $$ ( 21507, 21534 ) $$ @MustCall method close may not have been invoked on temp-var-1039 or any of its aliases.
            System.out.println(j.write(new StringWriter()));
                                      ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: possible exceptional exit due to XML.toJSONObject(s) with exception type org.json.JSONException
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
5 errors
